[package]
name = "minhook"
description = "A function hooking library for the Rust programming language"
version = "0.1.0"
authors = ["Jascha Neutelings"]
repository = "https://github.com/Jascha-N/minhook-rs"
license = "BSD-2-Clause"
readme = "README.md"
links = "MinHook"
build = "build.rs"
edition = "2021"

[features]
increased_arity = []

[dependencies]
kernel32-sys = { version = "0.2.2" }
libc = { version = "^0.2" }
winapi = { version = "0.3.9", features = ["minwindef", "ntdef", "winnls"] }
lazy_static = { version = "^1.4" }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
